# django_portfolio

./: .gitignore  pyproject.toml  requirements.txt
src/django_redis_demo/api/: models.py  urls.py  views.py
src/django_redis_demo/api/migrations/: 0001_initial.py
src/django_redis_demo/api/templates/api/: items.html
src/django_redis_demo/django_redis_demo/: asgi.py  settings.py  urls.py  wsgi.py
src/django_redis_demo/templates/: home.html
src/media_conveyor/: redis_db.py
src/media_conveyor/testers/: plex_tester.py
src/rp_portfolio/pages/: urls.py
src/rp_portfolio/portfolio_project/: settings.py  urls.py
src/rp_portfolio/projects/: admin.py  models.py  urls.py  views.py
src/rp_portfolio/projects/migrations/: 0001_initial.py  0002_project_image.py
tests/.media_conveyor/: credentials.json
